--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Helvey Equine Services - Equine Osteopathy in Tucson, AZ" />
     <meta property="og:description" content="Professional equine osteopathy services by Vanessa Helvey in Tucson, Arizona. Gentle, holistic bodywork to restore movement and balance for your horse." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/8a1a74dd-8218-4b1e-a52f-83636646c9d9.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
