--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="78ba53dc-de6f-4ef8-b72c-e1f8851a098d"></script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
